Fix facebook icon

--- a/css/testacm.webflow.css
+++ b/css/testacm.webflow.css
@@ -876,6 +876,7 @@ a {
 }
 
 .nav-phone-link {
+  height: 24px;
   color: #77787d;
   text-decoration: none;
 }
@@ -1274,6 +1275,11 @@ a {
 }
 
 .nav-facebook-link {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
   overflow: hidden;
   width: 24px;
   height: 24px;
@@ -1289,6 +1295,8 @@ a {
   position: relative;
   top: 5px;
   display: inline-block;
+  width: 24px;
+  height: 24px;
   margin-left: 15px;
   line-height: 14px;
 }
@@ -1426,8 +1434,8 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     font-size: 18px;
   }
   .navbar {
-    padding-right: 12px;
-    padding-left: 12px;
+    padding-right: 16px;
+    padding-left: 16px;
   }
   .opinions-row {
     margin-top: 120px;
@@ -1559,7 +1567,7 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     float: none;
   }
   .navbar {
-    padding-bottom: 50px;
+    padding-bottom: 75px;
   }
   .nav-menu {
     top: 81px;
@@ -1654,6 +1662,9 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     width: 100%;
     text-align: center;
   }
+  .nav-phone-label {
+    margin-top: 9px;
+  }
   .hero_container {
     padding-top: 0px;
     padding-bottom: 40px;
@@ -1672,6 +1683,7 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     background-position: 100% 50%;
   }
   .nav-phone-link {
+    height: 24px;
     text-align: center;
   }
   .phone-box {
@@ -1717,6 +1729,7 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     color: #b01e25;
   }
   .nav-facebook-block {
+    line-height: 20px;
     text-align: center;
   }
 }
