--- a/css/testacm.webflow.css
+++ b/css/testacm.webflow.css
@@ -150,6 +150,7 @@ a {
 }
 
 .button.in_cookies {
+  margin-bottom: 0px;
   padding: 7px 15px;
   float: left;
   font-size: 14px;
@@ -421,7 +422,7 @@ a {
   min-height: 100px;
   min-width: 100px;
   margin-bottom: 102px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed';
   text-align: center;
 }
 
@@ -516,7 +517,7 @@ a {
   padding-top: 37px;
   border-radius: 50%;
   background-color: #ff9c00;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto Condensed';
   color: #000;
   text-align: center;
 }
@@ -717,7 +718,7 @@ a {
   right: 10px;
   bottom: 10px;
   z-index: 7;
-  padding: 12px 12px 12px 18px;
+  padding: 11px 12px 14px 18px;
   border-color: #f5f5f5 #e6e6e6 #e6e6e6;
   border-top-style: solid;
   border-top-width: 1px;
@@ -735,8 +736,25 @@ a {
 .strona-uzywa {
   display: inline-block;
   margin-right: 10px;
+  padding-bottom: 3px;
   float: left;
-  line-height: 33px;
+  line-height: 15px;
+  text-align: left;
+}
+
+.cookie-pop {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .nav-phone-box {
@@ -1303,6 +1321,17 @@ a {
 
 .usg-lekarz-imie {
   font-weight: 700;
+}
+
+.rodo-container {
+  padding-right: 18px;
+  padding-left: 18px;
+}
+
+.cookie-pop__link {
+  color: hsla(228.46153846153845, 64.64%, 54.75%, 1.00);
+  font-weight: 700;
+  text-decoration: none;
 }
 
 html.w-mod-js *[data-ix="initial-opacity"] {
