--- a/css/testacm.webflow.css
+++ b/css/testacm.webflow.css
@@ -1073,7 +1073,7 @@ a {
 }
 
 .additional-contact {
-  padding-bottom: 13px;
+  padding: 13px;
   opacity: 1;
   color: hsla(0, 0%, 100%, .64);
   font-size: 12px;
@@ -1094,7 +1094,7 @@ a {
 }
 
 .open-hours {
-  margin-top: 24px;
+  margin-top: 15px;
   border-radius: 4px;
   text-align: center;
 }
@@ -1209,7 +1209,7 @@ a {
 .contact-text-above-map.important {
   display: block;
   margin-top: -32px;
-  margin-bottom: 36px;
+  margin-bottom: 12px;
   color: #b01e25;
 }
 
@@ -1340,6 +1340,13 @@ a {
   color: hsla(228.46153846153845, 64.64%, 54.75%, 1.00);
   font-weight: 700;
   text-decoration: none;
+}
+
+.contact-text-buses {
+  margin-bottom: 19px;
+  font-size: 18px;
+  line-height: 18px;
+  text-align: center;
 }
 
 html.w-mod-js *[data-ix="initial-opacity"] {
