--- a/css/testacm.webflow.css
+++ b/css/testacm.webflow.css
@@ -1349,6 +1349,10 @@ a {
   text-align: center;
 }
 
+.maps-img-holder {
+  margin-top: 33px;
+}
+
 html.w-mod-js *[data-ix="initial-opacity"] {
   opacity: 0;
   -webkit-transform: scale(0.1, 0.1);
@@ -1767,6 +1771,7 @@ html.w-mod-js *[data-ix="initial-display-none"] {
     padding-bottom: 2px;
   }
   .contact-text-above-map {
+    margin-top: 18px;
     font-size: 16px;
   }
   .red-link {
@@ -1775,6 +1780,9 @@ html.w-mod-js *[data-ix="initial-display-none"] {
   .nav-facebook-block {
     line-height: 20px;
     text-align: center;
+  }
+  .maps-img-holder {
+    margin-top: 4px;
   }
 }
 
